# wregoolar

./: CMakeLists.txt  README.md  simple.hs
include/wregoolar/: ret.hpp
src/tests/wregoolar/: CMakeLists.txt  basic.cpp
